{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 564,
  "lineage": "5cff1d64-71e6-6ff2-beaf-0d699efec9b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "infras_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:704063666843:loadbalancer/infras-lb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "infras-lb-2003182691.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "infras-lb",
            "idle_timeout": 60,
            "instances": [
              "i-0633cc4257c5a3348",
              "i-0c935c28d4ca42d80"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "infras-lb",
            "security_groups": [
              "sg-0a4a9268454ff8298"
            ],
            "source_security_group": "704063666843/thang test",
            "source_security_group_id": "sg-0a4a9268454ff8298",
            "subnets": [
              "subnet-0962fbd4ed00ff32f",
              "subnet-0bdb418ef354b390f"
            ],
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-088c19a62afc4587d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088c19a62afc4587d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh protocol",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-06d574cb48d314f52",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d574cb48d314f52",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "allow ssh protocol",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:security-group/sg-0a4a9268454ff8298",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a4a9268454ff8298",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTP protocol",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTPs protocol",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow HTTPs protocol",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              }
            ],
            "name": "thang test",
            "name_prefix": "",
            "owner_id": "704063666843",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-060f0edf1cd9dc98c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060f0edf1cd9dc98c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bedd035c7c8ed955",
            "private_dns": "ip-10-0-2-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.125",
            "public_ip": "3.95.17.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f6d1ae2a2b8de995",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-003080217cfef74b7",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088c19a62afc4587d"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.bastion_sg",
            "module.bastion.data.aws_ami.ami_linux",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.database",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:704063666843:instance/i-0e016ef5fa66dd6f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e016ef5fa66dd6f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b525ff0ff807c3ca",
            "private_dns": "ip-10-0-1-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.20",
            "public_ip": "54.86.5.255",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05c3725b0f6b4b56c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bdb418ef354b390f",
            "tags": {
              "Name": "database-host"
            },
            "tags_all": {
              "Name": "database-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d574cb48d314f52"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.database_sg",
            "module.database.data.aws_ami.ami_linux",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013243a2f1f2c438b",
            "association_id": "eipassoc-0899ebd91b803e3fb",
            "domain": "vpc",
            "id": "eipalloc-013243a2f1f2c438b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-081475369e7bff111",
            "private_dns": "ip-10-0-2-190.ec2.internal",
            "private_ip": "10.0.2.190",
            "public_dns": "ec2-52-55-220-172.compute-1.amazonaws.com",
            "public_ip": "52.55.220.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "elasticIP"
            },
            "tags_all": {
              "Name": "elasticIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:internet-gateway/igw-011ffc89c308b6d4a",
            "id": "igw-011ffc89c308b6d4a",
            "owner_id": "704063666843",
            "tags": {
              "Name": "infra gateway"
            },
            "tags_all": {
              "Name": "infra gateway"
            },
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013243a2f1f2c438b",
            "connectivity_type": "public",
            "id": "nat-0d3c854069eff451c",
            "network_interface_id": "eni-081475369e7bff111",
            "private_ip": "10.0.2.190",
            "public_ip": "52.55.220.172",
            "subnet_id": "subnet-003080217cfef74b7",
            "tags": {
              "Name": "Nat-subnet 2"
            },
            "tags_all": {
              "Name": "Nat-subnet 2"
            }
          },
          "dependencies": [
            "module.infra_vpc.aws_eip.ip",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-088ab54842d9c3812",
            "id": "rtb-088ab54842d9c3812",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011ffc89c308b6d4a",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011ffc89c308b6d4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra rt - public"
            },
            "tags_all": {
              "Name": "infra rt - public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:route-table/rtb-0897e5e8cce8514c3",
            "id": "rtb-0897e5e8cce8514c3",
            "owner_id": "704063666843",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011ffc89c308b6d4a",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011ffc89c308b6d4a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra rt-private"
            },
            "tags_all": {
              "Name": "infra rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0881be23ad30c70",
            "route_table_id": "rtb-088ab54842d9c3812",
            "subnet_id": "subnet-0bdb418ef354b390f"
          },
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_route_table.rt1",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0700668b397093c72",
            "route_table_id": "rtb-088ab54842d9c3812",
            "subnet_id": "subnet-0962fbd4ed00ff32f"
          },
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_route_table.rt1",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfb9c9b225fd82ea",
            "route_table_id": "rtb-088ab54842d9c3812",
            "subnet_id": "subnet-003080217cfef74b7"
          },
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_route_table.rt1",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0638e242035fa0f36",
            "route_table_id": "rtb-088ab54842d9c3812",
            "subnet_id": "subnet-05f3543822a2cda29"
          },
          "dependencies": [
            "module.infra_vpc.aws_internet_gateway.ig1",
            "module.infra_vpc.aws_route_table.rt1",
            "module.infra_vpc.aws_subnet.subnet",
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-0bdb418ef354b390f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdb418ef354b390f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra subnet 0"
            },
            "tags_all": {
              "Name": "infra subnet 0"
            },
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-0962fbd4ed00ff32f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0962fbd4ed00ff32f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra subnet 1"
            },
            "tags_all": {
              "Name": "infra subnet 1"
            },
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-003080217cfef74b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003080217cfef74b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra subnet 2"
            },
            "tags_all": {
              "Name": "infra subnet 2"
            },
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:subnet/subnet-05f3543822a2cda29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f3543822a2cda29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704063666843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra subnet 3"
            },
            "tags_all": {
              "Name": "infra subnet 3"
            },
            "vpc_id": "vpc-0ffae4792c419ada7"
          },
          "dependencies": [
            "module.infra_vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.infra_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704063666843:vpc/vpc-0ffae4792c419ada7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e1aac5280b473ff3",
            "default_route_table_id": "rtb-0c1bd94bab8cfb19f",
            "default_security_group_id": "sg-043e36db3ae54331b",
            "dhcp_options_id": "dopt-06d1b853dc562d494",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffae4792c419ada7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1bd94bab8cfb19f",
            "owner_id": "704063666843",
            "tags": {
              "Name": "infra_vpc"
            },
            "tags_all": {
              "Name": "infra_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}